# sap_network

./: CMakeLists.txt
docs/: SAP_NETWORK_TLS_PLAN.md  tls_socket_tutorial.md
include/sap_network/: isocket.h  platform.h  socket_concept.h  socket_config.h  tcp_socket.h  tls_socket.h  types.h  udp_socket.h
src/: platform.cpp  socket_internal.h  tcp_socket.cpp  tcp_socket_posix.cpp  tcp_socket_windows.cpp  tls_internal.cpp  tls_internal.h  tls_socket.cpp  tls_trust_store_posix.cpp  tls_trust_store_windows.cpp  udp_socket.cpp  udp_socket_posix.cpp  udp_socket_windows.cpp
tests/: CMakeLists.txt  test_tcp_socket.cpp  test_tls_socket.cpp  test_udp_socket.cpp
